editing gitignore --DC

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
-*.o
-*.root
 *~
 *#
+*.o
+*Cint.h
+*Cint.cxx
+*Cint.cc
+*Dict.h
+*Dict.cxx
+*Dict.cc
+.depend
+*.rootmap
+*.so
+*.dylib
+*.root
+*.bin
+*.dat
+*.info
