--- a/Base/GNUmakefile
+++ b/Base/GNUmakefile
@@ -3,8 +3,8 @@
 #
 
 # specific names for this package
-DICT  = HitRemoval_CosmicRemovalCint
-SHLIB = libHitRemoval_CosmicRemoval.so
+DICT  = HitRemoval_BaseDict
+SHLIB = libHitRemoval_Base.so
 SOURCES = $(filter-out $(DICT).cxx, $(wildcard *.cxx))
 FMWK_HEADERS = LinkDef.h $(DICT).h
 HEADERS = $(filter-out $(FMWK_HEADERS), $(wildcard *.h))
@@ -14,7 +14,6 @@ OBJECTS = $(SOURCES:.cxx=.o)
 INCFLAGS  = -I.                       #Include itself
 INCFLAGS += $(shell larlite-config --includes)
 INCFLAGS += $(shell basictool-config --includes)
-INCFLAGS += -I$(LARLITE_USERDEVDIR)/HitRemoval/Base
 
 # platform-specific options
 OSNAME          = $(shell uname -s)
@@ -27,7 +26,4 @@ include $(LARLITE_BASEDIR)/Makefile/Makefile.${OSNAME}
 # call the common GNUmakefile
 LDFLAGS += $(shell larlite-config --libs)
 LDFLAGS += $(shell basictool-config --libs)
-LDFLAGS += -L$(LARLITE_LIBDIR) -lHitRemoval_Base
 include $(LARLITE_BASEDIR)/Makefile/GNUmakefile.CORE
-
-
